[gd_scene load_steps=24 format=2]

[ext_resource path="res://uipack_fixed (1)/PNG/grey_button04.png" type="Texture" id=1]
[ext_resource path="res://uipack_fixed (1)/PNG/grey_button10.png" type="Texture" id=2]
[ext_resource path="res://uipack_fixed (1)/Font/kenvector_future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://spaceshooter/Bonus/kenvector_future_thin.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://uipack_fixed (1)/PNG/grey_button00.png" type="Texture" id=5]
[ext_resource path="res://uipack_fixed (1)/PNG/grey_button01.png" type="Texture" id=6]
[ext_resource path="res://MainMenu.gd" type="Script" id=7]
[ext_resource path="res://uipack_fixed (1)/Bonus/click1.ogg" type="AudioStream" id=8]
[ext_resource path="res://music/03_racing_through_asteroids_loop.ogg" type="AudioStream" id=9]
[ext_resource path="res://uipack_fixed (1)/PNG/grey_button03.png" type="Texture" id=10]
[ext_resource path="res://uipack_fixed (1)/PNG/grey_button02.png" type="Texture" id=11]
[ext_resource path="res://gameicons (1)/PNG/Black/2x/exitRight.png" type="Texture" id=12]
[ext_resource path="res://gameicons (1)/PNG/Black/2x/gear.png" type="Texture" id=13]
[ext_resource path="res://gameicons (1)/PNG/Black/2x/information.png" type="Texture" id=14]
[ext_resource path="res://uipack_fixed (1)/PNG/grey_button13.png" type="Texture" id=15]
[ext_resource path="res://uipack_fixed (1)/PNG/grey_button12.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=7]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/VBoxContainer/Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/StartButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SettingsButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/InfoButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ExitButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MarginContainer/VBoxContainer/Credits:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/Sign:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "SET"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/VBoxContainer/Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/StartButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SettingsButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/InfoButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ExitButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MarginContainer/VBoxContainer/Credits:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.498039 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/Sign:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color( 1, 1, 1, 0.352941 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 27
custom_constants/margin_top = 10
custom_constants/margin_left = 27
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 27.0
margin_top = 10.0
margin_right = 997.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0 )
margin_right = 970.0
margin_bottom = 266.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "Space Shooter"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 970.0
margin_bottom = 410.0
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 970.0
margin_bottom = 110.0
custom_constants/separation = 14

[node name="StartButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0 )
margin_left = 391.0
margin_right = 579.0
margin_bottom = 48.0
rect_min_size = Vector2( 188, 48 )
size_flags_horizontal = 4
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 10 )
texture_focused = ExtResource( 1 )
expand = true
stretch_mode = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/StartButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "START"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/StartButton"]
stream = ExtResource( 8 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
visible = false
margin_left = 391.0
margin_top = 52.0
margin_right = 579.0
margin_bottom = 100.0
rect_min_size = Vector2( 188, 48 )
size_flags_horizontal = 4
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/TextureButton2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 150, 28 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Quit Game"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/TextureButton2"]
stream = ExtResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 62.0
margin_right = 970.0
margin_bottom = 110.0
custom_constants/separation = 22
alignment = 1

[node name="SettingsButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 391.0
margin_right = 439.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="Exit" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SettingsButton"]
margin_left = 8.0
margin_top = 5.0
margin_right = 40.0
margin_bottom = 37.0
texture = ExtResource( 13 )
expand = true
stretch_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SettingsButton"]
stream = ExtResource( 8 )

[node name="InfoButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 461.0
margin_right = 509.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="Exit" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/InfoButton"]
margin_left = 8.0
margin_top = 5.0
margin_right = 40.0
margin_bottom = 37.0
texture = ExtResource( 14 )
expand = true
stretch_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/InfoButton"]
stream = ExtResource( 8 )

[node name="ExitButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 531.0
margin_right = 579.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="Exit" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ExitButton"]
margin_left = 8.0
margin_top = 5.0
margin_right = 40.0
margin_bottom = 37.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ExitButton"]
stream = ExtResource( 8 )

[node name="Credits" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0 )
margin_top = 414.0
margin_right = 970.0
margin_bottom = 524.0
rect_min_size = Vector2( 0, 110 )
custom_fonts/font = SubResource( 6 )
text = "Special Thanks to Kenney for his assets
Uses his font, space-shooter-redux and uipack.
Music by Leonardo Paz.
Space ship engine sounds by Tuomo Untinen."
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 528.0
margin_right = 970.0
margin_bottom = 580.0
custom_constants/margin_left = 21
custom_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
margin_left = 21.0
margin_right = 970.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
alignment = 1

[node name="Sign" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0 )
margin_left = 344.0
margin_top = 13.0
margin_right = 605.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 4 )
text = "BY SAIRAM MANGESHKAR"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -1.412
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/SET = SubResource( 8 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
